Work out of using string utils for java 11 blank usage in most locations